css/pages/initiative.css
header {
  background: url(../../assets/index/melting.webp);
}

.infogrid > .container {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 5em;
}

.infogrid > .container > .item {
  flex-direction: row;
  gap: 5em;
}

.infogrid > .container > .item::after {
  background: rgba(0, 0, 0, 0.7);
}

.infogrid > .container > .item > *:not(img) {
  z-index: 2;
}

.infogrid > .container > .item > .title > i {
  display: flex;
  justify-content: center;

  padding: 0.5em 1.3em;

  border-radius: 9em;

  font-size: clamp(1.5rem, 1.7vw, 1.7rem);
  background: color-mix(
    in srgb,
    rgba(255, 255, 255, 0.3) 30%,
    var(--item-color) 70%
  );
}

.infogrid > .container > .item > .title > h1 {
  font-size: clamp(2rem, 5vw, 3rem);
  font-weight: 600;

  word-wrap: break-word;
}

.infogrid > .container > .item > .title > span {
  font-size: clamp(1.3rem, 3vw, 1.7rem);
  color: rgba(255, 255, 255, 0.7);
}

.infogrid > .container > .item > .title > a {
  color: rgba(255, 255, 255, 0.7);
  text-decoration: none;
  font-size: clamp(1.3rem, 2vw, 1.4rem);

  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 1em;

  margin-top: 2em;

  z-index: 2;
}

.infogrid > .container > .item > .desc {
  display: flex;
  gap: 2em;
  width: 45%;
}

@media screen and (max-width: 1025px) {
  .infogrid > .container > .item > .desc {
    display: none;
  }
}

.infogrid > .container > .item > .desc > .item {
  padding: 3em;
  flex: 1 1 0;
  min-width: 0;

  border-radius: 1em;
  background: rgba(255, 255, 255, 0.1);
  backdrop-filter: blur(5px);

  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 2em;
}

.infogrid > .container > .item > .desc > .item > h1 {
  margin: 0;

  text-align: center;
  color: color-mix(in srgb, var(--item-color) 70%, rgba(255, 255, 255) 30%);
  font-size: clamp(2rem, 5vw, 3.5rem);
}

.infogrid > .container > .item > .desc > .item > span {
  text-align: center;
  color: rgba(255, 255, 255, 0.7);
  font-size: clamp(1.3rem, 3vw, 1.7rem);
}

